--- a/view/admin/store/category/show.templ
+++ b/view/admin/store/category/show.templ
@@ -78,9 +78,5 @@ templ Show(t store.Type, cats []store.Category) {
 }
 
 func type2Title(t store.Type) string {
-	if t == store.GarantiaType {
-		return "Garantías"
-	} else {
-		return "Tienda"
-	}
+	return "Manga"
 }
