--- a/view/admin/store/item/show.templ
+++ b/view/admin/store/item/show.templ
@@ -82,9 +82,5 @@ templ Show(cat store.Category, items []store.Item) {
 }
 
 func type2Title(t store.Type) string {
-	if t == store.GarantiaType {
-		return "Garantías"
-	} else {
-		return "Tienda"
-	}
+	return "Manga"
 }
