--- a/view/admin/store/product/show.templ
+++ b/view/admin/store/product/show.templ
@@ -98,9 +98,5 @@ templ Show(item store.Item, products []store.Product) {
 }
 
 func type2Title(t store.Type) string {
-	if t == store.GarantiaType {
-		return "Garantías"
-	} else {
-		return "Tienda"
-	}
+	return "Manga"
 }
