--- a/view/admin/store/show.templ
+++ b/view/admin/store/show.templ
@@ -22,15 +22,7 @@ templ Show() {
 				<li>
 					<a
 						class="font-semibold text-azure"
-						href={ templ.URL(path.Join("/admin/tienda/type", store.GarantiaType.ToSlug(), "categories")) }
-					>
-						Garantías
-					</a>
-				</li>
-				<li>
-					<a
-						class="font-semibold text-azure"
-						href={ templ.URL(path.Join("/admin/tienda/type", store.StoreType.ToSlug(), "categories")) }
+						href={ templ.URL(path.Join("/admin/tienda/type", store.MangaType.ToSlug(), "categories")) }
 					>
 						Tienda
 					</a>
