--- a/view/admin/store/show.templ
+++ b/view/admin/store/show.templ
@@ -24,7 +24,7 @@ templ Show() {
 						class="font-semibold text-azure"
 						href={ templ.URL(path.Join("/admin/tienda/type", store.MangaType.ToSlug(), "categories")) }
 					>
-						Tienda
+						Manga
 					</a>
 				</li>
 			</ul>
