--- a/view/page/index.templ
+++ b/view/page/index.templ
@@ -5,253 +5,16 @@ import (
 )
 
 templ Index() {
-	@layout.BasePage("Team Support Services") {
-		<main>
-			<!-- Carousel -->
-			<my-carousel class="h-[36rem]" controls indicator autoplay="6000">
-				<div>
-					<img class="relative object-cover w-full h-full" src="/static/img/fondo1.webp" alt=""/>
-					<section class="absolute flex flex-col gap-6 items-center px-4 py-16 max-w-7xl mx-auto inset-x-0 inset-y-0 text-chalky lg:flex-row-reverse lg:justify-between lg:gap-0">
-						<div class="relative w-full max-w-sm aspect-[3/2] lg:max-w-2xl">
-							<img
-								class="absolute w-[50%] left-0"
-								src="/static/img/laptop4.webp"
-								alt="laptop"
-							/>
-							<img
-								class="absolute w-[70%] right-0 top-[15%]"
-								src="/static/img/laptop3.webp"
-								alt="laptop"
-							/>
-						</div>
-						<div class="flex flex-col items-center gap-6 lg:items-start lg:gap-9">
-							<img class="w-72" src="/static/img/logo2.webp" alt="logo"/>
-							<h3
-								class="text-2xl font-semibold text-center lg:text-6xl lg:text-left lg:font-bold lg:italic"
-							>
-								Empieza bien el año 
-								<br/>
-								protege tu equipo
-							</h3>
-							<img class="w-40" src="/static/img/garantiaext.webp" alt="garantia"/>
-						</div>
-					</section>
+	@layout.BasePage("AnimeConnection") {
+		<main class="min-h-[calc(100dvh-16rem)]">
+			<!-- Portada -->
+			<section>
+				<div class="max-w-7xl mx-auto">
+					<img class="h-96 object-cover mt-3 opacity-75 lg:h-auto" src="/static/img/mangashow.webp" alt="Portada"/>
 				</div>
-				<div>
-					<img class="relative object-cover w-full h-full" src="/static/img/fondo2.webp" alt=""/>
-					<section class="absolute flex flex-col gap-6 items-center px-4 py-16 max-w-7xl mx-auto inset-x-0 inset-y-0 text-chalky lg:flex-row-reverse lg:justify-between lg:gap-0">
-						<div class="relative w-full max-w-sm aspect-[3/2] lg:max-w-2xl">
-							<img
-								class="absolute w-[55%] left-0"
-								src="/static/img/laptop2.webp"
-								alt="laptop"
-							/>
-							<img
-								class="absolute w-[50%] right-0 top-[25%]"
-								src="/static/img/laptop1.webp"
-								alt="laptop"
-							/>
-						</div>
-						<div class="flex flex-col items-center gap-6 lg:items-start lg:gap-9">
-							<img class="w-72" src="/static/img/logo2.webp" alt="logo"/>
-							<h3
-								class="text-2xl font-semibold text-center lg:text-6xl lg:text-left lg:font-bold lg:italic"
-							>
-								<div>Centro autorizado</div>
-								<div class="lg:mt-3">
-									de servicio
-									<img class="w-52 mt-6 lg:inline lg:mt-0" src="/static/img/asus.webp" alt="asus"/>
-								</div>
-							</h3>
-						</div>
-					</section>
-				</div>
-				<div>
-					<div class="overflow-hidden w-full h-full">
-						<img class="absolute hidden object-cover w-full h-full lg:block xl:-right-[10%] 2xl:-right-[15%]" src="/static/img/fondo3.webp" alt=""/>
-						<img class="absolute hidden object-cover w-full h-full lg:block" src="/static/img/fondo3_.webp" alt=""/>
-						<div class="w-full h-full bg-navy"></div>
-					</div>
-					<section class="absolute flex flex-col gap-6 justify-center items-center px-4 py-16 max-w-7xl mx-auto inset-x-0 inset-y-0 text-chalky lg:flex-row-reverse lg:justify-end lg:gap-0">
-						<div class="flex flex-col items-center gap-6 lg:items-start lg:gap-9">
-							<img class="w-72" src="/static/img/logo2.webp" alt="logo"/>
-							<h3
-								class="text-2xl font-semibold text-center lg:text-6xl lg:text-left lg:font-bold lg:italic"
-							>
-								<div>Centro autorizado</div>
-								<div class="lg:mt-3">
-									de servicio
-									<img class="w-96 mt-6 lg:inline lg:mt-0" src="/static/img/viewsonic.webp" alt="viewsonic"/>
-								</div>
-							</h3>
-						</div>
-					</section>
-				</div>
-			</my-carousel>
-			<!-- Servicios -->
-			@Servicios()
+			</section>
 			<!-- Nosotros -->
-			<section>
-				<div id="nosotros" class="relative bottom-16 lg:bottom-24"></div>
-				<my-carousel-mod class="h-[55rem] lg:h-auto" controls>
-					<div class="flex flex-col gap-6 bg-azure lg:flex-row">
-						<div class="flex items-center grow-[2] basis-0 bg-navy lg:grow">
-							<div class="px-4 py-12 max-w-lg mx-auto">
-								<h2 class="mb-8 text-center text-3xl font-bold text-azure lg:mb-12 lg:text-left lg:text-4xl lg:font-semibold">¿Quiénes somos?</h2>
-								<div class="space-y-2 text-chalky">
-									<p>TEAM SUPPORT somos una empresa joven que cuenta con un equipo altamente experimentado en el sector, enriquecido por la amplia experiencia adquirida en COMPUCARE.</p>
-									<p>Especialista:</p>
-									<ul class="list-disc list-inside">
-										<li>En brindar servicios de gestión y desarrollo de proyectos.</li>
-										<li>En el área de Gestión de Garantía, al ser Centro Autorizado de Servicio (CAS) de las marcas Asus y Viewsonic.</li>
-										<li>Comercialización de equipos, repuestos y accesorios de equipos informáticos.</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="grow-[1] basis-0 lg:grow">
-							<img class="w-full h-full object-cover lg:aspect-[7/4]" src="/static/img/nosotros1.jpg" alt="nosotros"/>
-						</div>
-					</div>
-					<div class="flex flex-col gap-6 bg-azure lg:flex-row">
-						<div class="flex items-center grow-[2] basis-0 bg-navy lg:grow">
-							<div class="px-4 py-12 max-w-lg mx-auto">
-								<h2 class="mb-8 text-center text-3xl font-bold text-azure lg:mb-12 lg:text-left lg:text-4xl lg:font-semibold">Valores</h2>
-								<div class="space-y-2 text-chalky">
-									<p>Como empresa nos preocupa brindar un servicio de calidad, es por eso que nos regimos de los siguientes valores.</p>
-									<ul class="list-disc list-inside">
-										<li>Transparencia al mostrar todos nuestros procesos</li>
-										<li>Responsabilidad con nuestro trabajo</li>
-										<li>Resolución al brindarte las mejores opciones para tu caso o equipo</li>
-										<li>Claridad en la atención al cliente</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="grow-[1] basis-0 lg:grow">
-							<img class="w-full h-full object-cover lg:aspect-[7/4]" src="/static/img/nosotros2.jpg" alt="nosotros"/>
-						</div>
-					</div>
-					<div class="flex flex-col gap-6 bg-azure lg:flex-row">
-						<div class="flex items-center grow-[2] basis-0 bg-navy lg:grow">
-							<div class="px-4 py-12 max-w-lg mx-auto">
-								<h2 class="mb-8 text-center text-3xl font-bold text-azure lg:mb-12 lg:text-left lg:text-4xl lg:font-semibold">Misión</h2>
-								<div class="space-y-2 text-chalky">
-									<p>
-										Proveer servicios de calidad que tengan como resultado la satisfacción del
-										cliente, así como cumplir con los estándares de las marcas tecnológicas y
-										socios que representamos, contribuyendo así al mejoramiento de la imagen
-										en conjunto.
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="grow-[1] basis-0 lg:grow">
-							<img class="w-full h-full object-cover lg:aspect-[7/4]" src="/static/img/nosotros3.jpg" alt="nosotros"/>
-						</div>
-					</div>
-					<div class="flex flex-col gap-6 bg-azure lg:flex-row">
-						<div class="flex items-center grow-[2] basis-0 bg-navy lg:grow">
-							<div class="px-4 py-12 max-w-lg mx-auto">
-								<h2 class="mb-8 text-center text-3xl font-bold text-azure lg:mb-12 lg:text-left lg:text-4xl lg:font-semibold">Visión</h2>
-								<div class="space-y-2 text-chalky">
-									<p>
-										Lograr consolidarnos como una de las mejores empresas reconocidas por
-										brindar excelencia en el desarrollo de servicios informáticos a nivel nacional.
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="grow-[1] basis-0 lg:grow">
-							<img class="w-full h-full object-cover lg:aspect-[7/4]" src="/static/img/nosotros1.jpg" alt="nosotros"/>
-						</div>
-					</div>
-				</my-carousel-mod>
-			</section>
-			<!-- Clientes -->
-			<section>
-				<div class="px-4 py-16 space-y-8 max-w-7xl mx-auto text-center lg:pt-24">
-					<h2 class="mb-8 text-center text-3xl font-bold text-azure lg:mb-16 lg:font-semibold">Clientes y marcas con las que trabajamos</h2>
-					<p>
-						Contamos con una gran cartera de clientes, además de ser CAS de Asus y Viewsonic trabajamos 
-						<br/>
-						con empresas como SUNAT - BANBIF - WAVETEC
-					</p>
-					<p>
-						Nos preocupamos por ofrecer un servicio de calidad en todos los aspectos tanto técnico como de
-						<br/>
-						equipos, por eso trabajamos con las mejores marcas reconocidas mundialmente como
-						<br/>
-						LENOVO - DELL - SAMSUNG - HP
-					</p>
-				</div>
-				<!-- Logos -->
-				<div class="flex justify-center items-center gap-7 bg-navy py-6 mb-16 lg:gap-16 lg:mb-24">
-					<img class="w-16 lg:w-24" src="/static/img/sunat.png" alt="sunat"/>
-					<img class="w-16 lg:w-24" src="/static/img/banbif.png" alt="banbif"/>
-					<img class="w-16 lg:w-24" src="/static/img/lenovo.png" alt="lenovo"/>
-				</div>
-			</section>
-			<!-- Cobertura -->
-			@Cobertura()
 			<!-- Contacto -->
-			<section>
-				<div id="contacto" class="relative bottom-16 lg:bottom-24"></div>
-				<div class="px-4 py-16 max-w-7xl mx-auto lg:py-24">
-					<h2 class="mb-8 text-center text-3xl font-bold text-azure lg:mb-16 lg:text-left lg:text-5xl lg:font-semibold">Contáctenos</h2>
-					<div class="grid gap-x-20 gap-y-12 md:grid-cols-2 lg:grid-cols-3">
-						<!-- Direccion -->
-						<div class="space-y-3">
-							<h3 class="text-2xl font-bold">Dirección</h3>
-							<p>Santiago de Surco <span class="text-azure">(Principal)</span><br/> Av. Monte de los Olivos 993</p>
-							<iframe class="w-[100%] h-52 border-0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d243.78325246162137!2d-76.98872528847686!3d-12.144137801052675!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b94aef91f5fd%3A0xb8e1571454613b38!2sTeam%20Support%20Services!5e0!3m2!1ses-419!2spe!4v1710132384110!5m2!1ses-419!2spe" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
-						</div>
-						<!-- Telefonos -->
-						<div class="space-y-3">
-							<h3 class="text-2xl font-bold">Teléfonos</h3>
-							<p>Atención telefónica y mensajería de lunes a viernes 9am a 6pm</p>
-							<h4 class="text-2xl font-bold">Central telefónica</h4>
-							<a class="block ml-9 hover:text-livid" href="tel:017433030">
-								<svg class="inline w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-									<path d="M8 4a2.6 2.6 0 0 0-2 .9 6.2 6.2 0 0 0-1.8 6 12 12 0 0 0 3.4 5.5 12 12 0 0 0 5.6 3.4 6.2 6.2 0 0 0 6.6-2.7 2.6 2.6 0 0 0-.7-3L18 12.9a2.7 2.7 0 0 0-3.8 0l-.6.6a.8.8 0 0 1-1.1 0l-1.9-1.8a.8.8 0 0 1 0-1.2l.6-.6a2.7 2.7 0 0 0 0-3.8L10 4.9A2.6 2.6 0 0 0 8 4Z"></path>
-								</svg>
-								(01) 743-3030
-							</a>
-							<h4 class="text-2xl font-bold">Mensajería WhatsApp</h4>
-							<a class="block ml-9 hover:text-livid" href="https://api.whatsapp.com/send?phone=+51989311876&text=Quiero%20más%20información" target="_blank">
-								<svg class="inline w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 32 32">
-									<path d="M19.11 17.205c-.372 0-1.088 1.39-1.518 1.39a.63.63 0 0 1-.315-.1c-.802-.402-1.504-.817-2.163-1.447-.545-.516-1.146-1.29-1.46-1.963a.426.426 0 0 1-.073-.215c0-.33.99-.945.99-1.49 0-.143-.73-2.09-.832-2.335-.143-.372-.214-.487-.6-.487-.187 0-.36-.043-.53-.043-.302 0-.53.115-.746.315-.688.645-1.032 1.318-1.06 2.264v.114c-.015.99.472 1.977 1.017 2.78 1.23 1.82 2.506 3.41 4.554 4.34.616.287 2.035.888 2.722.888.817 0 2.15-.515 2.478-1.318.13-.33.244-.73.244-1.088 0-.058 0-.144-.03-.215-.1-.172-2.434-1.39-2.678-1.39zm-2.908 7.593c-1.747 0-3.48-.53-4.942-1.49L7.793 24.41l1.132-3.337a8.955 8.955 0 0 1-1.72-5.272c0-4.955 4.04-8.995 8.997-8.995S25.2 10.845 25.2 15.8c0 4.958-4.04 8.998-8.998 8.998zm0-19.798c-5.96 0-10.8 4.842-10.8 10.8 0 1.964.53 3.898 1.546 5.574L5 27.176l5.974-1.92a10.807 10.807 0 0 0 16.03-9.455c0-5.958-4.842-10.8-10.802-10.8z" fill-rule="evenodd"></path>
-								</svg>
-								989 311 876
-							</a>
-						</div>
-						<!-- Correos -->
-						<div class="space-y-3">
-							<h3 class="text-2xl font-bold">Correos</h3>
-							<div>
-								<p>Cualquier consulta acerca de nuestros servicios para ventas, escríbenos a:</p>
-								<a class="ml-9 hover:text-livid" href="mailto:ventas@teamsupportperu.com">
-									<svg class="inline w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-										<path d="M2 5.6V18c0 1.1.9 2 2 2h16a2 2 0 0 0 2-2V5.6l-.9.7-7.9 6a2 2 0 0 1-2.4 0l-8-6-.8-.7Z"></path>
-										<path d="M20.7 4.1A2 2 0 0 0 20 4H4a2 2 0 0 0-.6.1l.7.6 7.9 6 7.9-6 .8-.6Z"></path>
-									</svg>
-									ventas@teamsupportperu.com
-								</a>
-							</div>
-							<div>
-								<p>Para cualquier otra consulta o sugerencia:</p>
-								<a class="ml-9 hover:text-livid" href="mailto:sugerencias@teamsupportperu.com">
-									<svg class="inline w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-										<path d="M2 5.6V18c0 1.1.9 2 2 2h16a2 2 0 0 0 2-2V5.6l-.9.7-7.9 6a2 2 0 0 1-2.4 0l-8-6-.8-.7Z"></path>
-										<path d="M20.7 4.1A2 2 0 0 0 20 4H4a2 2 0 0 0-.6.1l.7.6 7.9 6 7.9-6 .8-.6Z"></path>
-									</svg>
-									sugerencias@teamsupportperu.com
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
 		</main>
 	}
 }
