--- a/view/admin/user/show.templ
+++ b/view/admin/user/show.templ
@@ -16,11 +16,7 @@ templ Show() {
 			</div>
 			<!-- Title -->
 			<h1 class="mt-3 font-bold text-3xl">Usuarios</h1>
-			<ul class="mt-6 space-y-2">
-				<li>
-					<a class="font-semibold text-azure" href="/admin/usuarios/role/recorder/users">Administradores de series</a>
-				</li>
-			</ul>
+			<ul class="mt-6 space-y-2"></ul>
 		</main>
 	}
 }
