--- a/view/cart/show.templ
+++ b/view/cart/show.templ
@@ -51,7 +51,7 @@ templ Show(items []cart.Item) {
 	<!-- Applet button -->
 	<button
 		id="cart-button"
-		class="group relative flex items-center justify-center w-8 h-8 text-livid"
+		class="group relative flex items-center justify-center w-8 h-8"
 		type="button"
 		if TotalProducts(items) > 0 {
 			data-active
@@ -117,7 +117,7 @@ templ Show(items []cart.Item) {
 								<a
 									class="font-bold text-sm hover:text-livid"
 									if i.Product.Item.Category.Type == store.MangaType {
-										href={ templ.URL(path.Join("/garantia", i.Product.Item.Category.Slug, i.Product.Item.Slug)) }
+										href={ templ.URL(path.Join("/store/categories", i.Product.Item.Category.Slug, "items", i.Product.Item.Slug)) }
 									}
 								>
 									{ i.Product.Item.Name + " - " + i.Product.Name }
