--- a/view/layout/header.templ
+++ b/view/layout/header.templ
@@ -7,8 +7,8 @@ import (
 )
 
 templ Header() {
-	<header class="sticky top-0 z-50 shadow-md bg-white">
-		<div class="flex items-center px-4 py-4 max-w-7xl mx-auto lg:py-9">
+	<header class="top-0 z-50 bg-white max-w-7xl mx-auto border-b-4 border-b-amber-500">
+		<div class="flex items-center px-4 py-4 max-w-6xl mx-auto lg:pt-9 lg:pb-5">
 			<!-- Navigation button -->
 			<script>
                 function handleNavbarDisplay(event) {
@@ -20,7 +20,7 @@ templ Header() {
                     }
                 }
             </script>
-			<button class="group peer flex items-center justify-center w-8 h-8 text-livid lg:hidden" onclick="handleNavbarDisplay(event)" type="button">
+			<button class="group peer flex items-center justify-center w-8 h-8 lg:hidden" onclick="handleNavbarDisplay(event)" type="button">
 				<svg class="w-4 h-4 group-data-[open]:hidden" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 4 15">
 					<path d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"></path>
 				</svg>
@@ -29,29 +29,23 @@ templ Header() {
 				</svg>
 			</button>
 			<!-- Navigation bar (mobiles) -->
-			<nav class="hidden absolute top-full inset-x-0 bg-chalky text-livid shadow-md peer-data-[open]:block lg:!hidden">
-				<ul class="flex flex-col divide-y">
-					<li><a class="flex justify-center items-center h-12" href="/#servicios">Servicios</a></li>
+			<nav class="hidden absolute top-full inset-x-0 shadow-md peer-data-[open]:block lg:!hidden">
+				<ul class="flex flex-col divide-y font-bold uppercase">
+					<li><a class="flex justify-center items-center h-12" href="/store">Mangas</a></li>
 					<li><a class="flex justify-center items-center h-12" href="/#nosotros">Nosotros</a></li>
-					<li><a class="flex justify-center items-center h-12" href="/garantia">Venta de garantía extendida</a></li>
-					<li><a class="flex justify-center items-center h-12" href="/store">Tienda</a></li>
-					<li><a class="flex justify-center items-center h-12" href="/ticket">Consultar ticket</a></li>
-					<li><a class="flex justify-center items-center h-12" href="/#contacto">Contáctenos</a></li>
+					<li><a class="flex justify-center items-center h-12" href="/#contacto">Contacto</a></li>
 				</ul>
 			</nav>
 			<!-- Logo -->
-			<a class="flex items-center justify-center h-8 ml-3 lg:ml-0" href="/">
-				<img class="w-44 lg:w-[210px]" src="/static/img/logo1.png" alt="Team Support Services"/>
+			<a class="relative h-8 ml-3 lg:ml-0 font-bold font-mono text-2xl" href="/">
+				<p class="relative top-1">AnimeConnection</p>
 			</a>
 			<!-- Navigation bar -->
-			<nav class="hidden grow ml-16 font-semibold text-sm text-livid lg:block">
-				<ul class="flex justify-between">
-					<li><a href="/#servicios">Servicios</a></li>
+			<nav class="hidden grow ml-16 font-bold lg:block">
+				<ul class="flex justify-end gap-16 font-semibold uppercase">
+					<li><a href="/store">Mangas</a></li>
 					<li><a href="/#nosotros">Nosotros</a></li>
-					<li><a href="/garantia">Venta de garantía extendida</a></li>
-					<li><a href="/store">Tienda</a></li>
-					<li><a href="/ticket">Consultar ticket</a></li>
-					<li><a href="/#contacto">Contáctenos</a></li>
+					<li><a href="/#contacto">Contacto</a></li>
 				</ul>
 			</nav>
 			<!-- Shopping cart applet-->
@@ -63,7 +57,7 @@ templ Header() {
 				@view.Show(cart.GetItems(ctx))
 			</div>
 			if user, ok := auth.GetUser(ctx); !ok {
-				<a class="flex items-center justify-center w-8 h-8 ml-3 text-livid lg:ml-16" href="/login">
+				<a class="flex items-center justify-center w-8 h-8 ml-3 lg:ml-16" href="/login">
 					<svg class="w-6 h-6 lg:w-8 lg:h-8" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
 						<path d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z"></path>
 					</svg>
@@ -72,7 +66,7 @@ templ Header() {
 				<!-- User applet-->
 				<div id="user-applet" class="group ml-3 lg:ml-16">
 					<!-- Applet button -->
-					<button class="open flex items-center justify-center w-8 h-8 text-livid" type="button">
+					<button class="open flex items-center justify-center w-8 h-8" type="button">
 						<svg class="w-6 h-6 lg:w-8 lg:h-8" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
 							<path d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z"></path>
 						</svg>
