--- a/view/store/category.templ
+++ b/view/store/category.templ
@@ -9,11 +9,11 @@ import (
 
 templ Category(like string, page int, slug string, items []store.Item) {
 	if len(items) == 0 {
-		<div class="flex flex-col justify-center items-center">
-			<svg class="w-80 h-80 text-livid" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+		<div class="flex flex-col justify-center items-center text-livid">
+			<svg class="w-80 h-80" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
 				<path fill-rule="evenodd" d="M4 4c0-.6.4-1 1-1h1.5c.5 0 .9.3 1 .8L7.9 6H19a1 1 0 0 1 1 1.2l-1.3 6a1 1 0 0 1-1 .8h-8l.2 1H17a3 3 0 1 1-2.8 2h-2.4a3 3 0 1 1-4-1.8L5.7 5H5a1 1 0 0 1-1-1Z" clip-rule="evenodd"></path>
 			</svg>
-			<h2 class="font-bold text-3xl text-center text-livid">Vaya! no hay items para mostrar</h2>
+			<h2 class="font-bold text-3xl text-center">Vaya! no hay items para mostrar</h2>
 		</div>
 	} else {
 		<ul class="grid grid-cols-[repeat(auto-fit,minmax(15rem,1fr))] gap-16">
