--- a/view/layout/footer.templ
+++ b/view/layout/footer.templ
@@ -6,8 +6,8 @@ templ Footer() {
 			<!-- Links -->
 			<ul class="flex flex-col gap-1 text-base items-center uppercase font-bold [&_a:hover]:text-gray-500 lg:flex-row lg:justify-between">
 				<li><a href="/store">Mangas</a></li>
-				<li><a href="/#nosotros">Nosotros</a></li>
-				<li><a href="/#contacto">Contacto</a></li>
+				<li><a href="/nosotros">Nosotros</a></li>
+				<li><a href="/contacto">Contacto</a></li>
 			</ul>
 			<!-- Info -->
 			<p class="text-center font-semibold">
