--- a/view/layout/header.templ
+++ b/view/layout/header.templ
@@ -32,8 +32,8 @@ templ Header() {
 			<nav class="hidden absolute bg-white top-full inset-x-0 shadow-md peer-data-[open]:block lg:!hidden">
 				<ul class="flex flex-col divide-y font-bold uppercase">
 					<li><a class="flex justify-center items-center h-12" href="/store">Mangas</a></li>
-					<li><a class="flex justify-center items-center h-12" href="/#nosotros">Nosotros</a></li>
-					<li><a class="flex justify-center items-center h-12" href="/#contacto">Contacto</a></li>
+					<li><a class="flex justify-center items-center h-12" href="/nosotros">Nosotros</a></li>
+					<li><a class="flex justify-center items-center h-12" href="/contacto">Contacto</a></li>
 				</ul>
 			</nav>
 			<!-- Logo -->
@@ -44,8 +44,8 @@ templ Header() {
 			<nav class="hidden grow ml-16 font-bold lg:block">
 				<ul class="flex justify-end gap-16 font-semibold uppercase">
 					<li><a href="/store">Mangas</a></li>
-					<li><a href="/#nosotros">Nosotros</a></li>
-					<li><a href="/#contacto">Contacto</a></li>
+					<li><a href="/nosotros">Nosotros</a></li>
+					<li><a href="/contacto">Contacto</a></li>
 				</ul>
 			</nav>
 			<!-- Shopping cart applet-->
