--- a/view/page/index.templ
+++ b/view/page/index.templ
@@ -1,10 +1,11 @@
 package page
 
 import (
+	"alc/model/store"
 	"alc/view/layout"
 )
 
-templ Index() {
+templ Index(items []store.Item) {
 	@layout.BasePage("AnimeConnection") {
 		<main class="min-h-[calc(100dvh-16rem)]">
 			<!-- Portada -->
@@ -14,6 +15,7 @@ templ Index() {
 				</div>
 			</section>
 			<!-- Nosotros -->
+			@Latest(items)
 			<!-- Contacto -->
 		</main>
 	}
